--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  font-family: 'Segoe UI', sans-serif !important;
+  font-style: normal;
+}
+
+head, body, h1, h2, h3, h4, h5, h6, li, p {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+
+
